<resources>
    <string name="app_name">myMovies</string>
    <string name="button">Show All PG-13 Movies</string>
    <string name="title">Movie title:</string>
    <string name="genre">Genre:</string>
    <string name="year">Year:</string>
    <string name="rating">Rating:</string>
    <string name="id">Movie ID:</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">cancel</string>
</resources>